--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "scripts": {
     "test": "jest --watch",
-    "start": "ts-node-dev --respawn  src/index.ts"
+    "start": "node dist/src/index.js",
+    "build": "npx tsc",
+    "local": "ts-node-dev --respawn  src/index.ts"
   },
   "keywords": [],
   "author": "",
